Fix map zoom, buttons squished close together

--- a/src/app/pages/map/map.component.scss
+++ b/src/app/pages/map/map.component.scss
@@ -10,6 +10,10 @@
   margin-top: 0.25em;
 }
 
+button {
+  margin: 0.25em;
+}
+
 .buttonbar {
   display: flex;
   justify-content: space-between;
