--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,9 +29,6 @@ p {
   margin-top: 0.25em;
 }
 
-button {
-  margin: 0.25em;
-}
 
 mat-tab-body {
   margin: 0 2em;
